--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.14.1",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
