--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lottiefiles/dotlottie-react": "^0.14.1",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
+    "lottie-react": "^2.4.1",
     "motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
