--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,21 @@
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.525.0",
     "motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "react-spinners": "^0.17.0",
+    "sass": "^1.89.2",
     "swiper": "^11.2.8",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^24.0.13",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
