--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,36 +10,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.10",
-    "axios": "^1.10.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/swiper": "^6.0.0",
+    "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "lottie-react": "^2.4.1",
-    "lucide-react": "^0.525.0",
-    "motion": "^12.18.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2",
+    "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
-    "sass": "^1.89.2",
-    "swiper": "^11.2.8",
-    "tailwindcss": "^4.1.10",
-    "zustand": "^5.0.6"
+    "sass": "^1.90.0",
+    "swiper": "^11.2.10",
+    "tailwindcss": "^4.1.11",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/node": "^24.0.13",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "eslint": "^9.25.0",
+    "@eslint/js": "^9.32.0",
+    "@types/estree": "^1.0.8",
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.39.0",
+    "vite": "^7.0.6"
   }
 }
