--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.11",
     "@types/swiper": "^6.0.0",
     "axios": "^1.11.0",
