--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -22,7 +22,28 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@shared": [
+        "shared/index.ts"
+      ],
+      "@shared/*": [
+        "shared/*"
+      ],
+      "@widgets": [
+        "widgets/index.ts"
+      ],
+      "@widgets/*": [
+        "widgets/*"
+      ],
+      "@pages": [
+        "pages/index.ts"
+      ],
+      "@pages/*": [
+        "pages/*"
+      ]
+    }
   },
   "include": [
     "src"
