--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "react-router dev",
+    "build": "react-router build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-router/dev": "^7.9.2",
+    "@react-router/node": "^7.9.2",
+    "@vercel/react-router": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@types/swiper": "^6.0.0",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "isbot": "^5",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
@@ -29,7 +32,8 @@
     "sass": "^1.90.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
