--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -43,9 +43,14 @@
       "@pages/*": [
         "pages/*"
       ]
-    }
+    },
+    "types": [
+      "vite/client",
+      "@react-router/dev"
+    ]
   },
   "include": [
-    "src"
+    "src",
+    "*.ts"
   ]
 }
