--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@react-router/dev": "^7.9.2",
     "@react-router/node": "^7.9.2",
-    "@vercel/react-router": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@types/swiper": "^6.0.0",
+    "@vercel/react-router": "^1.2.3",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "i18next": "^25.5.2",
@@ -29,11 +29,10 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
-    "sass": "^1.90.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
-    "zustand": "^5.0.7",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -49,6 +48,7 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "sass": "^1.93.2",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.0.6"
