--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "resend": "^4.6.0"
+    "nodemailer": "^7.0.9"
   },
   "devDependencies": {
-    "@types/node": "^24.0.13",
     "@vercel/node": "^2.3.0"
   }
 }
