--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^4.1.12",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
