feat(backend): modify dockerfile for security & small fixes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,9 +10,15 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o server .
 
 FROM alpine:latest
 
-WORKDIR /root/
+WORKDIR /app
 COPY --from=builder /app/server .
 
 EXPOSE 8080
+
+RUN addgroup -g 1001 -S appuser && \
+    adduser -u 1001 -S appuser -G appuser && \
+    chown -R appuser:appuser /app
+
+USER appuser
 
 CMD ["./server"]
