fix(workflows): -> add missing flag

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -28,6 +28,7 @@ jobs:
           region: europe-central2
           source: ./backend
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+          flags: "--allow-unauthenticated"
           env_vars: |
             EMAIL_USER=${{ secrets.EMAIL_USER }}
             EMAIL_PASS=${{ secrets.EMAIL_PASS }}
