--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,22 @@
   "scripts": {
     "dev": "react-router dev",
     "build": "react-router build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "react-router-serve ./build/serve/index.js",
+    "typecheck": "react-router typegen && tsc",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@react-router/dev": "^7.9.2",
     "@react-router/node": "^7.9.2",
+    "@react-router/serve": "^7.9.2",
+    "@vercel/react-router": "^1.2.3",
+    "react-router": "^7.7.1",
+    "isbot": "^5",
     "@tailwindcss/vite": "^4.1.11",
     "@types/swiper": "^6.0.0",
-    "@vercel/react-router": "^1.2.3",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
-    "isbot": "^5",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
@@ -27,15 +29,14 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
-    "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.12",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@react-router/dev": "^7.9.2",
     "@eslint/js": "^9.32.0",
     "@types/estree": "^1.0.8",
     "@types/node": "^24.2.0",
@@ -52,6 +53,7 @@
     "sass": "^1.93.2",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.39.0",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
