feat(tsconfig): properly configure ts for ssr with react router

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -3,11 +3,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
@@ -25,23 +21,12 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": "./src",
     "paths": {
-      "@shared/*": [
-        "shared/*"
-      ],
-      "@widgets/*": [
-        "widgets/*"
-      ],
-      "@pages/*": [
-        "pages/*"
-      ]
+      "@shared/*": ["shared/*"],
+      "@widgets/*": ["widgets/*"],
+      "@pages/*": ["pages/*"]
     },
-    "types": [
-      "vite/client",
-      "@react-router/dev"
-    ]
+    "types": ["node", "vite/client"],
+    "rootDirs": [".", "./../.react-router/types"]
   },
-  "include": [
-    "src",
-    "./react-router/types/**/*"
-  ]
+  "include": ["src", ".react-router/types/**/*"]
 }
