--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:7979
+# VITE_API_URL=http://localhost:7979
+VITE_API_URL=https://backend-dev-6575778207.europe-central2.run.app
