feat: install and configure typescript-plugin-css-modules ts plugin

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -26,7 +26,14 @@
       "@pages/*": ["pages/*"]
     },
     "types": ["node", "vite/client"],
-    "rootDirs": ["./src", "./.react-router/types/src"]
+    "rootDirs": ["./src", "./.react-router/types/src"],
+
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules",
+        "options": { "allowUnknownClassnames": true }
+      }
+    ]
   },
   "include": ["src", ".react-router/types/**/*"]
 }
