--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "react-router build",
     "start": "react-router-serve ./build/serve/index.js",
     "typecheck": "react-router typegen && tsc",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "docs:scss": "sassdoc src/shared/styles --dest docs/scss"
   },
   "dependencies": {
     "@react-router/node": "^7.9.2",
@@ -51,6 +52,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "sass": "^1.93.2",
+    "sassdoc": "^2.7.4",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.39.0",
     "typescript-plugin-css-modules": "^5.2.0",
