--- a/frontend/.sassdocrc
+++ b/frontend/.sassdocrc
@@ -9,7 +9,8 @@
     "elevation": "Elevation Tokens",
     "motion": "Motion Tokens",
     "colors": "Colors Tokens",
-    "breakpoints": "Breakpoints Tokens"
+    "breakpoints": "Breakpoints Tokens",
+    "shape": "Shape tokens"
   },
   "display": {
     "access": ["public"],
