feat(npm): update react-router dependancies & install remix-i18next

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,14 @@
     "docs:scss": "sassdoc src/shared/styles --dest docs/scss"
   },
   "dependencies": {
-    "@react-router/node": "^7.9.2",
-    "@react-router/serve": "^7.9.2",
+    "@react-router/node": "^7.9.6",
+    "@react-router/serve": "^7.9.6",
     "@tailwindcss/vite": "^4.1.11",
     "@types/swiper": "^6.0.0",
     "@vercel/react-router": "^1.2.3",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
-    "i18next": "^25.5.2",
+    "i18next": "^25.6.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "isbot": "^5",
     "lottie-react": "^2.4.1",
@@ -27,10 +27,11 @@
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-i18next": "^15.7.3",
+    "react-i18next": "^15.7.4",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.6",
     "react-spinners": "^0.17.0",
+    "remix-i18next": "^7.4.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "zod": "^4.1.12",
@@ -38,7 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
-    "@react-router/dev": "^7.9.2",
+    "@react-router/dev": "^7.9.6",
     "@types/estree": "^1.0.8",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.9",
