--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,12 @@
     "classnames": "^2.5.1",
     "i18next": "^25.6.3",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-fetch-backend": "^7.0.0",
     "isbot": "^5",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
+    "pretty-cache-header": "^1.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.4",
