--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "start": "react-router-serve ./build/serve/index.js",
     "typecheck": "react-router typegen && tsc",
     "lint": "eslint .",
-    "docs:scss": "sassdoc src/shared/styles --dest docs/scss"
+    "docs:scss": "sassdoc src/shared/styles --dest docs/scss",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@react-router/node": "^7.9.6",
@@ -60,6 +62,11 @@
     "typescript-eslint": "^8.39.0",
     "typescript-plugin-css-modules": "^5.2.0",
     "vite": "^7.0.6",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "storybook": "^10.1.4",
+    "@storybook/react-vite": "^10.1.4",
+    "@storybook/addon-a11y": "^10.1.4",
+    "@storybook/addon-docs": "^10.1.4",
+    "eslint-plugin-storybook": "^10.1.4"
   }
 }
