refactor(development-process-section): initial layout of mobile version and use i18n for translations texts

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -33,3 +33,7 @@ dist-ssr
 
 *storybook.log
 storybook-static
+
+/src/widgets/development-process-section/mobile.png
+/src/widgets/development-process-section/desktop.png
+
